@@ -25,7 +25,9 @@ if not exist "%SERVER_DIR%\bin\catalina.bat" (
     exit /b 1
 )
 
-REM Note: java.endorsed.dirs property is not supported on Java 9+ (fatal on 21); do not add it back.
-set JAVA_OPTS=%JAVA_OPTS% -Dhttps.protocols=TLSv1.2 -Djava.net.preferIPv4Stack=true -Djava.net.preferIPv4Addresses=true -Dfile.encoding=UTF-8 -Xmx1024m -XX:+DisableExplicitGC -XX:+UseConcMarkSweepGC -XX:NewSize=256m -XX:SurvivorRatio=16 -Dcatalina.base=%SERVER_DIR% -Dcatalina.home=%SERVER_DIR% -Djava.io.tmpdir=%SERVER_DIR%\temp -Dderby.system.home=%SERVER_DIR%\derbydata -Dperc.h2.data.home=%SERVER_DIR%\h2data
+REM Note: java.endorsed.dirs is not supported on Java 9+ (fatal on 21); do not add it back.
+REM Note: CMS GC (UseConcMarkSweepGC) was removed in Java 14 (fatal on 21). G1 is the JDK default.
+REM Align Windows JAVA_OPTS with TomcatStartup.sh (no CMS-era GC flags).
+set JAVA_OPTS=%JAVA_OPTS% -Dhttps.protocols=TLSv1.2 -Djava.net.preferIPv4Stack=true -Djava.net.preferIPv4Addresses=true -Dfile.encoding=UTF-8 -Xmx1024m -XX:+DisableExplicitGC -Dcatalina.base=%SERVER_DIR% -Dcatalina.home=%SERVER_DIR% -Djava.io.tmpdir=%SERVER_DIR%\temp -Dperc.h2.data.home=%SERVER_DIR%\h2data
 set CATALINA_HOME=%SERVER_DIR%
 "%SERVER_DIR%\bin\catalina.bat" run
